--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Jay's Personal Blog
 email: cs.flyfreejay@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal self-development blog where I record my personal studies or projects I do over time. 
-baseurl: "/my-blog/" # the subpath of your site, e.g. /blog
+baseurl: "/my-blog" # the subpath of your site, e.g. /blog
 url: "https://uoft-flyfreejay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  uoft-flyfreejay
 
