--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  uoft-flyfreejay
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
