--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,10 @@ github_username:  uoft-flyfreejay
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-hacker
+# theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
